[package]
name = "clipboard-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shine_library = {path = "../shine_library"}
anyhow = "1.0.56"
clipboard = "0.5.0"
chrono = "0.4.19"
serde_json = "1.0.79"
log = "0.4.14"