[package]
name = "clipboard-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shine_library = { git = "https://github.com/glistenlau/shine_library" }
anyhow = "1.0.56"
clipboard = "0.5.0"
chrono = "0.4.19"
serde_json = "1.0.79"
log = "0.4.14"
async-graphql = "3.0.35"
async-graphql-poem = "3.0.35"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
poem = "1.3.16"
clap = { version = "3.1.6", features = ["derive"] }
clipboard-master = "3.1.3"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "daemon"
path = "src/daemon/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
